fixed header image size on mobile layout

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1004,7 +1004,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media screen and (max-width: 768px) {
   .owl-carousel-fullwidth .item, .owl-carousel-fullwidth .fh5co-owl-text-wrap {
-    height: inherit;
+    height: 600px;
     padding: 5em 0;
   }
 }
